--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
-    "redis": "^5.10.0"
+    "redis": "^5.10.0",
+    "sharp": "^0.34.5"
   }
 }
